# release-note-generator

./: .gitignore  Cargo.toml  README.md
src/: main.rs
