[package]
name = "release-note-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.2.2"
clap = { version = "4.4.2", features = ["derive"] }
serde_toml = "0.0.1"
toml = "0.7.7"
serde = { version = "1.0.188", features = ["derive"] }
